Fix up <code> blocks to not wrap and be left-justified, and add section to pull down gnome-common's gnome-autogen.sh

--- a/www.gnome.org/projects/NetworkManager/styles/default.css
+++ b/www.gnome.org/projects/NetworkManager/styles/default.css
@@ -97,6 +97,8 @@ code {
 	padding: 10px;
 	background-color: #efefef;
 	margin-right: 30px;
+	text-align: left;
+	white-space: nowrap;
 }
 
 :link, :visited {
